--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,14 @@
 
 
          <div style="margin-top:3%"></div>
-         <h1>OUR EMAILs</h1>
-         <p class="aboutText"> 
+         <h1 class="emailsHeader">OUR EMAILS</h1>
+         <p class="contactText"> 
             klay@kl9y.com 
          </p>
-         <p class="aboutText">
+         <p class="contactText">
             nick@kl9y.com
          </p>
-         <p class="aboutText">
+         <p class="contactText">
             kl9yclothing@gmail.com
          </p>
          
