--- a/products/hat.html
+++ b/products/hat.html
@@ -41,7 +41,7 @@
             <div class="prodDetails">
                 <h1>9Y LOGO HAT</h1>
                 <p class="priceText">$ 30</p>
-                <div id="productIdForCart" class="dev"></div>
+                <div id="productIdForCart" class="dev">price_1NFMC8JObEa52vYfW7QYZJ6E</div>
 
                 <div class="colorOptions">
                     <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/5kAdTteDob353Sg8wF';` ,'../imgs/products/hat/9YHatWhite.png',
