--- a/products/champion-graffiti.html
+++ b/products/champion-graffiti.html
@@ -24,7 +24,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="../imgs/products/champion-graffiti/KL9YGraffitiLimitlessPotential.jpg" style="width: 100%;">
+                <img id="productImage" src="../imgs/products/champion-graffiti/KL9YGraffitiLimitlessPotential.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>CHAMPION GRAFFITI CREW NECK</h1>
