--- a/products/champion-graffiti.html
+++ b/products/champion-graffiti.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>9 Of Hearts</title>
+        <title>Champion Graffiti Hoodie</title>
         <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
