--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img class="kl9yLogo" src="imgs/9yOFFICIALSmaller.png"></a>
+            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="imgs/9yOFFICIALSmaller.png"></a>
         </div>
         
         <script src="script.js"></script>
