--- a/products/9-of-hearts.html
+++ b/products/9-of-hearts.html
@@ -13,11 +13,11 @@
     <body>
         <script src ="../script.js"></script>
         <div class="cartContainer">
-            <a href="https://kl9y.com/cart"><img class="cart" src="../assets/cart.png"></a> 
+            <a href="https://kl9y.com/cart"><img alt="cart" class="cart" src="../assets/cart.png"></a> 
             <script>totalCart()</script>
         </div>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
+            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
 
         <script>renderNav();</script>
@@ -25,7 +25,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img id="productImage" src="../imgs/products/9-of-hearts/9ofhearts.png" style="width: 100%;">
+                <img alt="product image" id="productImage" src="../imgs/products/9-of-hearts/9ofhearts.png" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>9 Of Hearts Hoodie</h1>
@@ -52,7 +52,7 @@
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
+                    <img alt="sizing guide" class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
                 </div>
    
 
