--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -14,12 +14,12 @@
     <body>
         <script src ="../script.js"></script>
         <div class="cartContainer">
-            <a href="https://kl9y.com/cart"><img class="cart" src="../assets/cart.png"></a> 
+            <a href="https://kl9y.com/cart"><img alt="cart" class="cart" src="../assets/cart.png"></a> 
             <script>totalCart()</script>
         </div>
 
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
+            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
         
         
@@ -29,8 +29,8 @@
             <div class="prodImg">
                 <img  id="productImage" src="../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg" style="width: 100%;">
                 <div class="imageThumbnails">
-                    <img class="thumbnails" src="../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg" onclick="changeRadio('colorWhite')">
-                    <img class="thumbnails" src="../imgs/products/graffiti-hoodie/BlackGraffiti.jpg" onclick="changeRadio('colorBlack')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg" onclick="changeRadio('colorWhite')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/graffiti-hoodie/BlackGraffiti.jpg" onclick="changeRadio('colorBlack')">
                   </div>
             </div>
             <div class="prodDetails">
