--- a/products/splatter-paint.html
+++ b/products/splatter-paint.html
@@ -13,11 +13,11 @@
     <body>
         <script src ="../script.js"></script>
         <div class="cartContainer">
-            <a href="https://kl9y.com/cart"><img class="cart" src="../assets/cart.png"></a> 
+            <a href="https://kl9y.com/cart"><img alt="cart" class="cart" src="../assets/cart.png"></a> 
             <script>totalCart()</script>
         </div>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
+            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
     
         <script>renderNav();</script>
