--- a/products/vintage-wash.html
+++ b/products/vintage-wash.html
@@ -13,11 +13,11 @@
     <body>
         <script src ="../script.js"></script>
         <div class="cartContainer">
-            <a href="https://kl9y.com/cart"><img class="cart" src="../assets/cart.png"></a> 
+            <a href="https://kl9y.com/cart"><img alt="cart" class="cart" src="../assets/cart.png"></a> 
             <script>totalCart()</script>
         </div>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
+            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
         
         <script>renderNav();</script>
@@ -26,9 +26,9 @@
             <div class="prodImg">
                 <img  id="productImage" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" style="width: 100%;">
                 <div class="imageThumbnails">
-                    <img class="thumbnails" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" onclick="changeRadio('colorBlack'); changeImage('../imgs/products/vintage-black/vintage-black-irl2.jpg')">
-                    <img class="thumbnails" src="../imgs/products/vintage-black/vintage-black.jpg" onclick="changeRadio('colorBlack')">
-                    <img class="thumbnails" src="../imgs/products/vintage-purple/vintage-purple.jpg" onclick="changeRadio('colorPurple')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" onclick="changeRadio('colorBlack'); changeImage('../imgs/products/vintage-black/vintage-black-irl2.jpg')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/vintage-black/vintage-black.jpg" onclick="changeRadio('colorBlack')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/vintage-purple/vintage-purple.jpg" onclick="changeRadio('colorPurple')">
                 </div>
             </div>
             <div class="prodDetails">
