--- a/products/hat.html
+++ b/products/hat.html
@@ -26,7 +26,7 @@
         
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/hat/9YHatWhite.png" style="width: 100%;">
+                <img alt="product image" id="productImage" src="../imgs/products/hat/9YHatWhite.png" style="width: 100%;">
                 <div class="imageThumbnails">
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/hat/9YHatWhite.png" onclick="changeRadio('colorWhite')">
                     
