--- a/products/pants.html
+++ b/products/pants.html
@@ -24,7 +24,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/pants/LimitlessPotentialPants.jpg" style="width: 100%;">
+                <img alt="product image" id="productImage" src="../imgs/products/pants/LimitlessPotentialPants.jpg" style="width: 100%;">
                 
             </div>
             <div class="prodDetails">
