--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -27,7 +27,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg" style="width: 100%;">
+                <img alt="product image" id="productImage" src="../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg" style="width: 100%;">
                 <div class="imageThumbnails">
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg" onclick="changeRadio('colorWhite')">
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/graffiti-hoodie/BlackGraffiti.jpg" onclick="changeRadio('colorBlack')">
