--- a/products/limitless-tee.html
+++ b/products/limitless-tee.html
@@ -25,7 +25,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/limitless-tee/LimitlessT.jpg" style="width: 100%;">
+                <img alt="product image" id="productImage" src="../imgs/products/limitless-tee/LimitlessT.jpg" style="width: 100%;">
                 
             </div>
             <div class="prodDetails">
