--- a/products/mousepad.html
+++ b/products/mousepad.html
@@ -24,7 +24,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img id="productImage" src="../imgs/products/mousepad/ledmousepad.png" style="width: 100%;">
+                <img alt="product image" id="productImage" src="../imgs/products/mousepad/ledmousepad.png" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>KL9Y GAMING MOUSEPAD</h1>
