--- a/products/vintage-wash.html
+++ b/products/vintage-wash.html
@@ -24,7 +24,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" style="width: 100%;">
+                <img alt="product image"  id="productImage" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" style="width: 100%;">
                 <div class="imageThumbnails">
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" onclick="changeRadio('colorBlack'); changeImage('../imgs/products/vintage-black/vintage-black-irl2.jpg')">
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/vintage-black/vintage-black.jpg" onclick="changeRadio('colorBlack')">
