sizing guide alt text added

--- a/products/9y-hoodie.html
+++ b/products/9y-hoodie.html
@@ -82,7 +82,7 @@
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
+                    <img alt="sizing guide" class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
                 </div>
    
                 
