--- a/products/champion-graffiti.html
+++ b/products/champion-graffiti.html
@@ -53,7 +53,7 @@
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/champion-graffiti/sizing-chart(crewneck).png">
+                    <img alt="sizing guide" class="sizingKlay" src="../imgs/products/champion-graffiti/sizing-chart(crewneck).png">
                 </div>
    
 
