--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -73,7 +73,7 @@
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
+                    <img alt="sizing guide" class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
                 </div>
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">50% cotton, 50% polyester</p>
