--- a/products/pants.html
+++ b/products/pants.html
@@ -52,7 +52,7 @@
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/pants/sizing-chart(pants).png">
+                    <img alt="sizing guide" class="sizingKlay" src="../imgs/products/pants/sizing-chart(pants).png">
                 </div>
 
                 <p class = "detailText">DETAILS</p>
