--- a/products/vintage-wash.html
+++ b/products/vintage-wash.html
@@ -46,7 +46,7 @@
 
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/vintage-black/vintage-sizing.png">
+                    <img alt="sizing guide" class="sizingKlay" src="../imgs/products/vintage-black/vintage-sizing.png">
                 </div>
    
                 
