--- a/products/limitless-tee.html
+++ b/products/limitless-tee.html
@@ -53,7 +53,7 @@
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/limitless-tee/sizing-chart(tshirt).png">
+                    <img alt="sizing guide" class="sizingKlay" src="../imgs/products/limitless-tee/sizing-chart(tshirt).png">
                 </div>
 
                 <p class = "detailText">DETAILS</p>
