fixed 9y logo hoodie images

--- a/products/9y-hoodie.html
+++ b/products/9y-hoodie.html
@@ -29,13 +29,13 @@
                 <img alt="product image" id="productImage" src="../imgs/products/9y-hoodie/KL9YHoodieBlackFront.jpg" style="width: 100%;">
                 <div class="imageThumbnails">
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodieBlackFront.jpg" onclick="changeRadio('colorBlack')">
-                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodieBlackBack.jpg" onclick="changeRadio('colorBlack')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodieBlackBack.jpg" onclick="changeRadio('colorBlack') ; changeImage('../imgs/products/9y-hoodie/KL9YHoodieBlackBack.jpg')">
                     
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodiePurpleFront.jpg" onclick="changeRadio('colorPurple')">
-                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodiePurpleBack.jpg" onclick="changeRadio('colorPurple')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodiePurpleBack.jpg" onclick="changeRadio('colorPurple'); changeImage('../imgs/products/9y-hoodie/KL9YHoodiePurpleBack.jpg')">
                    
                     <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodieWhiteFront.jpg" onclick="changeRadio('colorWhite')">
-                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodieWhiteBack.jpg" onclick="changeRadio('colorWhite')">
+                    <img alt="thumbnail image" class="thumbnails" src="../imgs/products/9y-hoodie/KL9YHoodieWhiteBack.jpg" onclick="changeRadio('colorWhite'); changeImage('../imgs/products/9y-hoodie/KL9YHoodieWhiteBack.jpg')">
                 </div>
             </div>
             <div class="prodDetails">
