--- a/products/9-of-hearts.html
+++ b/products/9-of-hearts.html
@@ -35,7 +35,7 @@
                 <div id="pId2" class="dev">price_1NOVCHJObEa52vYf8FPOraFf</div>
                 <div id="pId3" class="dev">price_1NOVCVJObEa52vYfUyVkLqtp</div>
                 <div id="pId4" class="dev">price_1NOVD1JObEa52vYfPRLmFLDb</div>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kA7v53YK7QT74s6ot';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/xwn78vro';">BUY NOW</button>
 
                 <div class="dropdownSize">
                     <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
