square links added

--- a/products/9y-hoodie.html
+++ b/products/9y-hoodie.html
@@ -49,22 +49,22 @@
                 <div id="pId4" class="dev">price_1NOV4EJObEa52vYf79cY4n7K</div>
 
                 <div class="colorOptions">
-                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/eVag1BgLw7QT74s7sG';`, '../imgs/products/9y-hoodie/KL9YHoodieBlackFront.jpg',
+                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/47U4LgXW';`, '../imgs/products/9y-hoodie/KL9YHoodieBlackFront.jpg',
                     ['price_1NOV3LJObEa52vYfYstdroMr','price_1NOV3kJObEa52vYflrANQatx','price_1NOV3yJObEa52vYfHd4S4JoA','price_1NOV4EJObEa52vYf79cY4n7K']
                     )" checked>
                     <label for="colorBlack">Black</label>
                     
-                    <input type="radio" id="colorPurple" name="color" value="purple" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/dR62aLfHsfjl2Oc28n';` ,'../imgs/products/9y-hoodie/KL9YHoodiePurpleFront.jpg',
+                    <input type="radio" id="colorPurple" name="color" value="purple" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/47U4LgXW';` ,'../imgs/products/9y-hoodie/KL9YHoodiePurpleFront.jpg',
                     ['price_1NOV51JObEa52vYfwHrLi8s0','price_1NOV5CJObEa52vYfcGvzSeg4','price_1NOV5NJObEa52vYf9As0rSYo','price_1NOV5ZJObEa52vYft630HQuy']
                     )">
                     <label for="colorPurple">Purple</label>
 
-                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/14k6r17aW5ILcoMfZe';` ,'../imgs/products/9y-hoodie/KL9YHoodieWhiteFront.jpg',
+                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/47U4LgXW';` ,'../imgs/products/9y-hoodie/KL9YHoodieWhiteFront.jpg',
                     ['price_1NOV7PJObEa52vYf6TEV3h1G','price_1NOV7bJObEa52vYfNBBpXnlZ','price_1NOV7nJObEa52vYfpq96x3zc','price_1NOV83JObEa52vYfyElzLOb2']
                     )">
                     <label for="colorWhite">White</label>
                 </div>
-                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/eVag1BgLw7QT74s7sG';">BUY NOW</button>
+                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://square.link/u/47U4LgXW';">BUY NOW</button>
 
 
                 <div class="dropdownSize">
