--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -45,19 +45,19 @@
 
                 <div class="colorOptions">
 
-                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/cN23eP7aW0oragEbIV';` ,'../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg',
+                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/l6nj5pIi';` ,'../imgs/products/graffiti-hoodie/WhiteGraffiti.jpg',
                     ['price_1NOUZnJObEa52vYfUBGyEc5v','price_1NOUadJObEa52vYfuPMp38ZE','price_1NOUb1JObEa52vYf7S4a6obV','price_1NOUbhJObEa52vYfcxmjQaNF']
                     )" checked>
                     <label for="colorWhite">White</label>
 
-                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/5kA7v51QC2wz3Sg5kw';`, '../imgs/products/graffiti-hoodie/BlackGraffiti.jpg',
+                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/S4QG1eBk';`, '../imgs/products/graffiti-hoodie/BlackGraffiti.jpg',
                     ['price_1NOUWzJObEa52vYfsJuukP8z','price_1NOUXrJObEa52vYf4syr0bpA','price_1NOUYNJObEa52vYfE2w7EP0T','price_1NOUYvJObEa52vYfxRkG5UMv']
                     )" >
                     <label for="colorBlack">Black</label>
                     
                     
                 </div>
-                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/cN23eP7aW0oragEbIV';">BUY NOW</button>
+                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://square.link/u/l6nj5pIi';">BUY NOW</button>
                 <div class="dropdownSize">
                     <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
                     <div id="sizeDropdown" class="dropdownSize-content">
