--- a/products/graffiti-tee.html
+++ b/products/graffiti-tee.html
@@ -45,12 +45,12 @@
 
                 <div class="colorOptions">
 
-                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/bIY9Ddcvgfjl3SgdRd';`, '../imgs/products/graffiti-tee/black-graffiti-tee.jpg',
+                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/34gyFoPZ';`, '../imgs/products/graffiti-tee/black-graffiti-tee.jpg',
                     ['price_1NPAF1JObEa52vYfvvQiiWmP','price_1NPAFDJObEa52vYfMTGGioOs','price_1NPAFOJObEa52vYf8QUck8h1','price_1NPAFbJObEa52vYfe3y8DKT7']
                     )" checked>
                     <label for="colorBlack">Black</label>
 
-                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/cN24iTan82wzbkI14s';` ,'../imgs/products/graffiti-tee/white-graffiti-tee.jpg',
+                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/gINkb02K';` ,'../imgs/products/graffiti-tee/white-graffiti-tee.jpg',
                     ['price_1NPAHdJObEa52vYfG1LiB5rJ','price_1NPAIYJObEa52vYfbfh0Jtcm','price_1NPAIkJObEa52vYfxpcQoGhQ','price_1NPAJ1JObEa52vYfkBYwEwVs']
                     )" >
                     <label for="colorWhite">White</label>
@@ -59,7 +59,7 @@
                     
                     
                 </div>
-                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/bIY9Ddcvgfjl3SgdRd';">BUY NOW</button>
+                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://square.link/u/34gyFoPZ';">BUY NOW</button>
                 <div class="dropdownSize">
                     <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
                     <div id="sizeDropdown" class="dropdownSize-content">
