--- a/products/hat.html
+++ b/products/hat.html
@@ -44,28 +44,28 @@
                 <div id="productIdForCart" class="dev">price_1NFMC8JObEa52vYfW7QYZJ6E</div>
 
                 <div class="colorOptions">
-                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/5kAdTteDob353Sg8wF';` ,'../imgs/products/hat/9YHatWhite.png',
+                    <input type="radio" id="colorWhite" name="color" value="white" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/dOe52I2R';` ,'../imgs/products/hat/9YHatWhite.png',
                     ['price_1NFMC8JObEa52vYfW7QYZJ6E']
                     )" checked>
                     <label for="colorWhite">White</label>
 
-                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/3cs8z966Sc794Wk28q';`, '../imgs/products/hat/9YHatBlack.jpg',
+                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/dOe52I2R';`, '../imgs/products/hat/9YHatBlack.jpg',
                     ['price_1NJqtXJObEa52vYf8JB3K0cl']
                     )" >
                     <label for="colorBlack">Black</label>
                     
-                    <input type="radio" id="colorPurple" name="color" value="purple" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/cN23eP66S3AD74sbJ1';` ,'../imgs/products/hat/9YHatPurple.jpg',
+                    <input type="radio" id="colorPurple" name="color" value="purple" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/dOe52I2R';` ,'../imgs/products/hat/9YHatPurple.jpg',
                     ['price_1NJquEJObEa52vYf8DRSA8BX']
                     )">
                     <label for="colorPurple">Purple</label>
 
-                    <input type="radio" id="colorTrucker" name="color" value="trucker" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/cN23eP66S3AD74sbJ1';` ,'../imgs/products/hat/TruckerHatBlack.jpg',
+                    <input type="radio" id="colorTrucker" name="color" value="trucker" onchange="updateBuyNowLink(`window.location.href='https://square.link/u/dOe52I2R';` ,'../imgs/products/hat/TruckerHatBlack.jpg',
                     ['price_1NOUuWJObEa52vYfEayMcswl'] )">
                     <label for="colorTrucker">Trucker</label>
 
                     
                 </div>
-                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAdTteDob353Sg8wF';">BUY NOW</button>
+                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://square.link/u/dOe52I2R';">BUY NOW</button>
    
                 <button  class="buyNowBtn" onclick="addToCart(productImage.src)">ADD TO CART</button> 
 
