--- a/products/limitless-tee.html
+++ b/products/limitless-tee.html
@@ -36,7 +36,7 @@
                 <div id="pId2" class="dev">price_1NOXzHJObEa52vYf7eWobe7B</div>
                 <div id="pId3" class="dev">price_1NOXzRJObEa52vYfj1ZIPBMB</div>
                 <div id="pId4" class="dev">price_1NOXziJObEa52vYfYtmQ4sm4</div>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00gcPpan8c793SgdRb';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/ypPJUmlg';">BUY NOW</button>
 
                 <div class="dropdownSize">
                     <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
