--- a/products/mousepad.html
+++ b/products/mousepad.html
@@ -30,7 +30,7 @@
                 <h1>KL9Y GAMING MOUSEPAD</h1>
                 <p class="priceText">$ 40</p>
                 <div id="productIdForCart" class="dev">price_1NFAnqJObEa52vYfqD7YiZ26</div>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/4gweXx2UGfjl3Sg3cj';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/4qcHn0HW';">BUY NOW</button>
                 <button  class="buyNowBtn" onclick="addToCart(productImage.src)">ADD TO CART</button> 
 
                 <p class = "detailText">DETAILS</p>
