--- a/products/pants.html
+++ b/products/pants.html
@@ -36,7 +36,7 @@
                 <div id="pId3" class="dev">price_1NOq3RJObEa52vYfNU8RkdV2</div>
                 <div id="pId4" class="dev">price_1NOq3jJObEa52vYfa4FaskRC</div>
 
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/4gw4iT52O3AD60o8wN';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/xHbgc5y5';">BUY NOW</button>
                 <div class="dropdownSize">
                     <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
                     <div id="sizeDropdown" class="dropdownSize-content">
