--- a/products/splatter-paint.html
+++ b/products/splatter-paint.html
@@ -37,7 +37,7 @@
                 <div id="pId3" class="dev">price_1NOVK9JObEa52vYfsfAInMeE</div>
                 <div id="pId4" class="dev">price_1NOVKZJObEa52vYfneh883un</div>
 
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAaHh9j48UX2Oc28e';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/i7zoazjo';">BUY NOW</button>
                 <div class="dropdownSize">
                     <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
                     <div id="sizeDropdown" class="dropdownSize-content">
