--- a/products/champion-graffiti.html
+++ b/products/champion-graffiti.html
@@ -36,7 +36,7 @@
                 <div id="pId3" class="dev">price_1NOY1DJObEa52vYfTNJ6WjlL</div>
                 <div id="pId4" class="dev">price_1NOY1RJObEa52vYfOvWr1LSK</div>
 
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAaHheDo6MP74sbJ2';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/Qft48akk';">BUY NOW</button>
 
                 <div class="dropdownSize">
                     <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
