--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
          <script>renderNav();</script>
 
         <div class="productLines">
-                <a class="imgA" href="https://kl9y.com/products/9-of-hearts"> 
-                <img alt="9 of hearts hoodie" class="prod" src ="imgs/products/9-of-hearts/9ofhearts.png" >
-                    <p class="listingName">9 OF HEARTS</p>
+                <a class="imgA" href="https://kl9y.com/products/less-than-three"> 
+                <img alt="9 of hearts hoodie" class="prod" src ="imgs/products/lessthanthree/lessthanthree.jpg" >
+                    <p class="listingName">&lt; 3</p>
                     <p class="listingName">HOODIE</p>
                     <p class="listingName">$50</p>
                 </a>
@@ -89,10 +89,12 @@
                     <p class="listingName">SPLATTER PAINT</p>
                     <p class="listingName">HELMET HOODIE</p>
                     <p class="listingName">$50</p></a>
-            <a class="imgA"> <img alt="blank" class="prod" src ="imgs/blank.png">
-                <p class="listingName"></p>
-                <p class="listingName"></p>
-                <p class="listingName"></p></a>
+                    <a class="imgA" href="https://kl9y.com/products/9-of-hearts"> 
+                        <img alt="9 of hearts hoodie" class="prod" src ="imgs/products/9-of-hearts/9ofhearts.png" >
+                            <p class="listingName">9 OF HEARTS</p>
+                            <p class="listingName">HOODIE</p>
+                            <p class="listingName">$50</p>
+                        </a>
             <a class="imgA"> <img alt="blank" class="prod" src ="imgs/blank.png">
                 <p class="listingName"></p>
                 <p class="listingName"></p>
