--- a/products/less-than-three.html
+++ b/products/less-than-three.html
@@ -35,7 +35,7 @@
                 <div id="pId2" class="dev">price_1NOVCHJObEa52vYf8FPOraFf</div>
                 <div id="pId3" class="dev">price_1NOVCVJObEa52vYfUyVkLqtp</div>
                 <div id="pId4" class="dev">price_1NOVD1JObEa52vYfPRLmFLDb</div>
-                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/xwn78vro';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://square.link/u/lj1yv8Jr';">BUY NOW</button>
 
    
                 <div class="sizeChartDivKlay">
