--- a/cards.html
+++ b/cards.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Klay Cards</title>
-        <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
-        <meta name="description" content="">
+        <link rel="icon" type="image/x-icon" href="imgs/KlayCardPurpsm.png">
+        <meta name="description" content="Custom Printed PVC Plastic Cards">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -17,7 +17,7 @@
             <script>totalCart()</script>
         </div>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img class="kl9yLogo2" src="imgs/KCardsLogowebsite.png"></a>
+            <a href="https://kl9y.com/cards"><img class="kl9yLogo2" src="imgs/KlayCardPurpsm.png"></a>
         </div>
 
         <div style="margin-top:1%"></div>
@@ -26,11 +26,11 @@
 
         <div class="productLines">
             <a class="imgA" href="https://kl9y.com/products/9-hearts"> 
-                <img alt="9 OF HEARTS" class="prod" src ="imgs/cards/reboot/rebootcard.jpg" onmouseover="changeImageHover(this, 'imgs/cards/reboot/rebootcard.jpg')" onmouseout="changeImageHover(this, 'imgs/cards/reboot/rebootcard.jpg')">
+                <img alt="Fortnite Reboot Card in Real Life" class="prod" src ="imgs/cards/reboot/FortniteRebootCardPVCRealLife.jpg" >
             
                 <p class="listingName">FORTNITE</p>
                 <p class="listingName">REBOOT CARD</p>
-                <p class="listingName">$12</p>
+                <p class="listingName">$6</p>
             </a>
         <a class="imgA" href="https://kl9y.com/products/champion-saturn"> 
             <img alt="CHAMPION SATURN" class="prod" src ="imgs/products/champion-saturn/Champion sweatshirt light blue back.jpeg" onmouseover="changeImageHover(this, 'imgs/products/champion-saturn/Champion sweatshirt light blue front.jpeg')" onmouseout="changeImageHover(this, 'imgs/products/champion-saturn/Champion sweatshirt light blue back.jpeg')">
