--- a/cart.html
+++ b/cart.html
@@ -5,14 +5,14 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Cart</title>
-        <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+        <link rel="icon" type="image/x-icon" href="imgs/KlayCardPurpsm.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="imgs/9yOFFICIALSmaller.png"></a>
+            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="imgs/KlayCardPurpsm.png"></a>
         </div>
         
         <script src="script.js"></script>
