--- a/cards.html
+++ b/cards.html
@@ -16,6 +16,8 @@
             <a href="https://kl9y.com/cart"><img class="cart" src="assets/cart.png"></a> 
             <script>totalCart()</script>
         </div>
+
+        <script>makeInitReq()</script>
         <div class="logoHolder">
             <a href="https://kl9y.com/cards"><img class="kl9yLogo2" src="imgs/KlayCardPurpsm.png"></a>
         </div>
