--- a/cart.html
+++ b/cart.html
@@ -12,11 +12,11 @@
     </head>
     <body>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="imgs/KlayCardPurpsm.png"></a>
+            <a href="https://kl9y.com/cards"><img alt="KL9Y Logo" class="kl9yLogo" src="imgs/KlayCardPurpsm.png"></a>
         </div>
         
         <script src="script.js"></script>
-        <script>renderNav();</script>
+       
         <h1 class="cartLabel">YOUR CART</h1>
 
         <div id="loadingAnimation">You are next in line to checkout</div>
