--- a/cards.html
+++ b/cards.html
@@ -27,15 +27,15 @@
          
 
         <div class="productLines">
-            <a class="imgA" href="https://kl9y.com/products/9-hearts"> 
-                <img alt="Fortnite Reboot Card in Real Life" class="prod" src ="imgs/cards/reboot/FortniteRebootCardPVCRealLife.jpg" >
+            <a class="imgA" href="https://kl9y.com/products/reboot-card"> 
+                <img alt="Fortnite Reboot Card in Real Life" class="prod" src ="imgs/cards/reboot/fortniterebootcardblack.jpg" >
             
                 <p class="listingName">FORTNITE</p>
                 <p class="listingName">REBOOT CARD</p>
                 <p class="listingName">$6</p>
             </a>
         <a class="imgA" href="https://kl9y.com/products/champion-saturn"> 
-            <img alt="CHAMPION SATURN" class="prod" src ="imgs/products/champion-saturn/Champion sweatshirt light blue back.jpeg" onmouseover="changeImageHover(this, 'imgs/products/champion-saturn/Champion sweatshirt light blue front.jpeg')" onmouseout="changeImageHover(this, 'imgs/products/champion-saturn/Champion sweatshirt light blue back.jpeg')">
+            <img alt="CHAMPION SATURN" class="prod" src ="imgs/cards/reboot/FortniteRebootCardPVCRealLife.jpg" onmouseover="changeImageHover(this, 'imgs/products/champion-saturn/Champion sweatshirt light blue front.jpeg')" onmouseout="changeImageHover(this, 'imgs/products/champion-saturn/Champion sweatshirt light blue back.jpeg')">
             <p class="listingName">CHAMPION SATURN</p>
             <p class="listingName">CREW NECK</p>
             <p class="listingName">$55</p></a>
