--- a/products/reboot-card.html
+++ b/products/reboot-card.html
@@ -17,7 +17,7 @@
             <script>totalCart()</script>
         </div>
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img alt="KL9Y Logo" class="kl9yLogo" src="imgs/KlayCardPurpsm.png"></a>
+            <a href="https://kl9y.com/cards"><img alt="KL9Y Logo" class="kl9yLogo" src="imgs/KlayCardPurpsm.png"></a>
         </div>
         
         <script>renderNav();</script>
